src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Business_Site__c</fullName>
        <label>Business Site</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Aerosol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil/Extrusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer DB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Wattyl Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Plastikote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer B&amp;Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Ace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Aerosol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Guardsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Huarun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Lowes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Menards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Masters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Agent__c</fullName>
        <description>Change 521836 GI Service Cloud - Hand Keyed to match Legacy Agent Code pulled over on Account in sync.</description>
        <inlineHelpText>Enter the Legacy System (11i, Prizm) Customer Service Agent code.  Please separate multiple codes with a comma &quot;,&quot;.</inlineHelpText>
        <label>Customer Service Agent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office_Until__c</fullName>
        <description>Date/Time field for user to provide information on when they will be out of office</description>
        <label>Out Of Office Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>B&amp;Q - used to designate the Region the VAC is assigned to for use in Calendar Views and Reports</description>
        <label>Region</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>B&amp;Q Region 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;Q Region 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;Q Region 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;Q Region 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;Q Region 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B&amp;Q Region 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW - 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC -5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA - 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QLD - 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA - 8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales team member, non-manager</description>
        <inlineHelpText>Non manager sales team member</inlineHelpText>
        <label>Sales Person</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Team Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Sales territory assigned to territory manager.</description>
        <label>Territory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VOIP_Phone_Number__c</fullName>
        <label>VOIP Phone Number</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>Ace_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Ace</value>
        </filters>
        <label>Ace Users</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Cons_Lowes_BU_Admin</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LOCALE</columns>
        <columns>Business_Unit__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsersParentAcc</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>Parent</value>
        </filters>
        <label>Active Users Parents for Account</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Automotive_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>DEFAULT_CURRENCY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>auto</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Automotive Users</label>
    </listViews>
    <listViews>
        <fullName>BQ_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>DEFAULT_CURRENCY</columns>
        <columns>TIMEZONE</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer B&amp;Q</value>
        </filters>
        <label>B&amp;Q Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BU_Administrators</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Terese,Kari,Gail,Kelley</value>
        </filters>
        <label>BU Administrators</label>
    </listViews>
    <listViews>
        <fullName>BU_Packaging_Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Packaging</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Packaging Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Consumer_Consumer</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer Consumer</value>
        </filters>
        <label>Consumer Consumer</label>
    </listViews>
    <listViews>
        <fullName>Consumer_DB</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer DB</value>
        </filters>
        <label>Consumer DB</label>
        <sharedTo>
            <role>ConsDBBUAdmin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Masters_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Business_Unit__c</columns>
        <columns>Region__c</columns>
        <columns>SFCONTENT_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>Consumer Masters</value>
        </filters>
        <label>Consumer Masters Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Consumer_Quality</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Consumer Quality Team</value>
        </filters>
        <label>Consumer Quality</label>
    </listViews>
    <listViews>
        <fullName>Consumer_Wattyl_Trade</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LOCALE</columns>
        <columns>TIMEZONE</columns>
        <columns>MANAGER</columns>
        <columns>MARKETING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>contains</operation>
            <value>Wattyl</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Consumer Wattyl Trade</label>
    </listViews>
    <listViews>
        <fullName>EPS_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>SFCONTENT_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>EPS</value>
        </filters>
        <label>EPS Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>